tests/paczka1/small_fuzzy/18375392.err
Error in line 1: TTnO9aJhSl S278 47,0
Error in line 11: 8MCDrZ2JKc A739 19,2
